--- a/WebApp/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/WebApp/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@model ShoppingCartViewModel
+
+
 <form method="post">
 	<br />
 	<div class="container">
@@ -8,11 +10,11 @@
 				<div class="row px-4">
 					<div class="col-6">
 						<h5 class="pt-2 text-white">
-							Shopping Cart
+							Order Summary
 						</h5>
 					</div>
 					<div class="col-6 text-end">
-						<a class="btn btn-outline-danger btn-sm">Back to Cart</a>
+						<a asp-action="Index" class="btn btn-outline-danger btn-sm">Back to Cart</a>
 					</div>
 				</div>
 			</div>
@@ -27,50 +29,56 @@
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>Name</label>
+									<label asp-for="OrderHeader.Name">Name</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control" asp-for="OrderHeader.Name"  />
+									<span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>Phone</label>
+									<label asp-for="OrderHeader.PhoneNumber">Phone</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.PhoneNumber" class="form-control" />
+									<span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>Street Address</label>
+									<label asp-for="OrderHeader.StreedAddress">Street Address</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.StreedAddress" class="form-control" />
+									<span asp-validation-for="OrderHeader.StreedAddress" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>City</label>
+									<label asp-for="OrderHeader.City">City</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.City" class="form-control" />
+									<span asp-validation-for="OrderHeader.City" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>State</label>
+									<label asp-for="OrderHeader.State">State</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.State" class="form-control" />
+									<span asp-validation-for="OrderHeader.State" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label>Postal Code</label>
+									<label asp-for="OrderHeader.PostalCode">Postal Code</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input asp-for="OrderHeader.PostalCode" class="form-control" />
+									<span asp-validation-for="OrderHeader.PostalCode" class="text-danger"></span>
 								</div>
 							</div>
 						</div>
@@ -79,18 +87,21 @@
 								<span class="text-info">Order Summary:</span>
 							</h4>
 							<ul class="list-group mb-3">
-								<li class="list-group-item d-flex justify-content-between">
-									<div>
+								@foreach (var detail in @Model.ShoppingCartList)
+								{
+									<li class="list-group-item d-flex justify-content-between">
+										<div>
 										<h6 class="my-0">Title</h6>
-										<small class="text-muted">Quantity: Count</small>
+										<small class="text-muted">Quantity: @detail.Count</small>
 									</div>
-									<span class="text-muted">Price * Count </span>
+									<span class="text-muted">@((detail.Price * @detail.Count).ToString("c"))</span>
 								</li>
+								}
 
 
 								<li class="list-group-item d-flex justify-content-between bg-light">
 									<small class="text-info">Total (USD)</small>
-									<strong class="text-info">$$</strong>
+									<strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
 								</li>
 							</ul>
 						</div>
@@ -101,7 +112,7 @@
 				<div class="row">
 					<div class="col-12 col-md-8 pt-2">
 						<p style="color:maroon; font-size:14px;">
-							Estimate Arrival Date:
+							Estimate Arrival Date: @DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()
 
 						</p>
 					</div>
