--- a/WebApp/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/WebApp/Areas/Customer/Views/Cart/Summary.cshtml
@@ -47,11 +47,11 @@
 							</div>
 							<div class="row my-1">
 								<div class="col-3">
-									<label asp-for="OrderHeader.StreedAddress">Street Address</label>
+									<label asp-for="OrderHeader.StreetAddress">Street Address</label>
 								</div>
 								<div class="col-9">
-									<input asp-for="OrderHeader.StreedAddress" class="form-control" />
-									<span asp-validation-for="OrderHeader.StreedAddress" class="text-danger"></span>
+									<input asp-for="OrderHeader.StreetAddress" class="form-control" />
+									<span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
 								</div>
 							</div>
 							<div class="row my-1">
